ADDED: EC2 Module

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular-devkit/schematics": "^18.2.1",
     "@aws-sdk/client-acm": "^3.637.0",
     "@aws-sdk/client-dynamodb": "^3.631.0",
+    "@aws-sdk/client-ec2": "^3.641.0",
     "@aws-sdk/client-eventbridge": "^3.633.0",
     "@aws-sdk/client-iam": "^3.637.0",
     "@aws-sdk/client-kms": "^3.629.0",
