ADDED: to cw module

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@aws-sdk/client-acm": "^3.637.0",
     "@aws-sdk/client-api-gateway": "^3.650.0",
     "@aws-sdk/client-cloudwatch": "^3.658.1",
+    "@aws-sdk/client-cloudwatch-logs": "^3.658.1",
     "@aws-sdk/client-dynamodb": "^3.631.0",
     "@aws-sdk/client-ec2": "^3.641.0",
     "@aws-sdk/client-eventbridge": "^3.633.0",
