--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@aws-sdk/client-ec2": "^3.641.0",
     "@aws-sdk/client-eventbridge": "^3.633.0",
     "@aws-sdk/client-iam": "^3.637.0",
+    "@aws-sdk/client-kinesis": "^3.658.1",
     "@aws-sdk/client-kms": "^3.629.0",
     "@aws-sdk/client-lambda": "^3.637.0",
     "@aws-sdk/client-s3": "^3.629.0",
