--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,25 @@
-version: "3.8"
 
 services:
+  local-admin:
+    container_name: "local-admin"
+    build: 
+      context: .
+    ports:
+      - 8443:8443
+    environment:
+      - LOCALSTACK_ENDPOINT=http://localstack:4566
+      - LOCALSTACK_REGION=us-west-2
+      - AWS_ACCESS_KEY_ID=localstack
+      - AWS_SECRET_ACCESS_KEY=localstack
+    networks:
+      - local-network
+    depends_on:
+      - localstack
+    volumes:        
+      - "./src:/home/node/app/src:rw"
+      - "./views:/home/node/app/views:rw" 
+      - "./public:/home/node/app/public:rw"
+
   localstack:
     container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
     image: localstack/localstack
@@ -11,6 +30,12 @@ services:
       # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
       - DEBUG=${LOCALSTACK_DEBUG:-0}
       - SERVICES=${LOCALSTACK_SERVICES}
+    networks:
+      - local-network
     volumes:
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
+
+networks:
+  local-network:
+    driver: bridge
