--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular-devkit/schematics": "^18.2.1",
     "@aws-sdk/client-acm": "^3.637.0",
     "@aws-sdk/client-api-gateway": "^3.650.0",
+    "@aws-sdk/client-cloudformation": "^3.675.0",
     "@aws-sdk/client-cloudwatch": "^3.658.1",
     "@aws-sdk/client-cloudwatch-logs": "^3.658.1",
     "@aws-sdk/client-dynamodb": "^3.631.0",
