ADDED: cf pages to support cf module

--- a/env.sample
+++ b/env.sample
@@ -5,6 +5,6 @@ LOCALSTACK_ENDPOINT=http://localhost:4566
 LOCALSTACK_REGION=us-west-2
 
 LOCALSTACK_DOCKER_NAME=localstack-admin
-LOCALSTACK_SERVICES=acm,apigateway,cloudwatch,logs,config,dynamodb,ec2,events,iam,kms,lambda,resource-groups,s3,secretsmanager,ses,sns,sqs,ssm,stepfunctions
+LOCALSTACK_SERVICES=acm,cloudformation,apigateway,cloudwatch,logs,config,dynamodb,ec2,events,iam,kms,lambda,resource-groups,s3,secretsmanager,ses,sns,sqs,ssm,stepfunctions
 LOCALSTACK_DEBUG=1
 LOCALSTACK_VOLUME_DIR=.localstack
