--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@aws-sdk/client-kinesis": "^3.658.1",
     "@aws-sdk/client-kms": "^3.629.0",
     "@aws-sdk/client-lambda": "^3.637.0",
+    "@aws-sdk/client-route-53": "^3.675.0",
     "@aws-sdk/client-s3": "^3.629.0",
     "@aws-sdk/client-secrets-manager": "^3.631.0",
     "@aws-sdk/client-sns": "^3.631.0",
