--- a/env.sample
+++ b/env.sample
@@ -1,10 +1,14 @@
 
 
 APP_PORT=8443
-LOCALSTACK_ENDPOINT=http://localhost:4566
+
+LOCALSTACK_ENDPOINT=http://host.docker.internal:4566
 LOCALSTACK_REGION=us-west-2
 
+AWS_ACCESS_KEY_ID=localstack
+AWS_SECRET_ACCESS_KEY=localstack
+
 LOCALSTACK_DOCKER_NAME=localstack-admin
-LOCALSTACK_SERVICES=acm,cloudformation,apigateway,cloudwatch,logs,config,dynamodb,ec2,events,iam,kms,lambda,resource-groups,s3,secretsmanager,ses,sns,sqs,ssm,stepfunctions
+LOCALSTACK_SERVICES=acm,cloudformation,apigateway,cloudwatch,logs,config,dynamodb,ec2,events,iam,kms,lambda,resource-groups,s3,secretsmanager,ses,sns,sqs,ssm,stepfunctions,route53
 LOCALSTACK_DEBUG=1
 LOCALSTACK_VOLUME_DIR=.localstack
