UPDATED: Readme.md and configuration

--- a/env.sample
+++ b/env.sample
@@ -2,7 +2,7 @@
 
 APP_PORT=8443
 
-LOCALSTACK_ENDPOINT=http://host.docker.internal:4566
+LOCALSTACK_ENDPOINT=http://localhost:4566
 LOCALSTACK_REGION=us-west-2
 
 AWS_ACCESS_KEY_ID=localstack
