--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@aws-sdk/client-route-53": "^3.675.0",
     "@aws-sdk/client-s3": "^3.629.0",
     "@aws-sdk/client-secrets-manager": "^3.631.0",
+    "@aws-sdk/client-ses": "^3.677.0",
     "@aws-sdk/client-sns": "^3.631.0",
     "@aws-sdk/client-sqs": "^3.637.0",
     "@aws-sdk/client-ssm": "^3.632.0",
