--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@aws-sdk/client-s3": "^3.629.0",
     "@aws-sdk/client-secrets-manager": "^3.631.0",
     "@aws-sdk/client-ses": "^3.677.0",
+    "@aws-sdk/client-sfn": "^3.679.0",
     "@aws-sdk/client-sns": "^3.631.0",
     "@aws-sdk/client-sqs": "^3.637.0",
     "@aws-sdk/client-ssm": "^3.632.0",
