--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@aws-sdk/client-sns": "^3.631.0",
     "@aws-sdk/client-sqs": "^3.637.0",
     "@aws-sdk/client-ssm": "^3.632.0",
+    "@aws-sdk/lib-storage": "^3.701.0",
     "@aws-sdk/s3-request-presigner": "^3.664.0",
     "@nestjs/axios": "^3.0.3",
     "@nestjs/common": "^10.4.1",
